# ccmux

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json  settings.local.json
.github/workflows/: release.yml
0_docs/: cjk-cursor-bug-report.md  fork-maintenance.md  pty-byte-trace-debugging.md  update-workflow.md
docs/PLAN/260425_vt100-to-vte-migration/: RELEASE_NOTES.md  spec.md  tasks.json
docs/app/: layout.tsx
docs/content/: getting-started.mdx  index.mdx
docs/content/en/: getting-started.mdx  index.mdx
lp/: index.html  style.css
npm/: README.md  package.json
npm/scripts/: install.js
src/: app.rs  claude_monitor.rs  config.rs  debug_log.rs  filetree.rs  keymap.rs  main.rs  mouse_encode.rs  pane.rs  preview.rs  theme.rs  ui.rs  version_check.rs
src/vt/: cell.rs  csi.rs  grid.rs  line.rs  mod.rs  osc.rs  parser.rs  reflow.rs  scrollback.rs  selection.rs  widget.rs  width.rs
tests/: manual-checklist.md  tui_trace_test.rs  vt_snapshot_test.rs
tests/fixtures/: capture_tui.py
tests/snapshots/: g2_decstbm.txt  g3_alt_screen.txt  g4_cjk_wrap.txt  g5_sgr_colors.txt
