[package]
name = "ccmux"
version = "0.6.0"
edition = "2021"
description = "Claude Code Multiplexer — manage multiple Claude Code instances in TUI panes"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
portable-pty = "0.8"
vt100 = "0.16"
anyhow = "1.0"
unicode-width = "0.2.1"
arboard = "3.6"
syntect = "5.3"
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
serde_json = "1"
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
ratatui-image = { version = "10", default-features = false, features = ["crossterm"] }
